suppress JavaFX runtime warnings